src/objects/SriramCo_Opportunity__x.object
<CustomObject>
    <externalDataSource>SriramCo</externalDataSource>
    <externalName>Opportunity</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <externalDeveloperName>Amount</externalDeveloperName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <externalDeveloperName>CampaignId</externalDeveloperName>
        <label>Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <externalDeveloperName>CloseDate</externalDeveloperName>
        <label>Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <externalDeveloperName>ExpectedRevenue</externalDeveloperName>
        <label>Expected Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalQuarter__c</fullName>
        <externalDeveloperName>FiscalQuarter</externalDeveloperName>
        <label>Fiscal Quarter</label>
        <precision>8</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <externalDeveloperName>FiscalYear</externalDeveloperName>
        <label>Fiscal Year</label>
        <precision>8</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal__c</fullName>
        <externalDeveloperName>Fiscal</externalDeveloperName>
        <label>Fiscal Period</label>
        <length>6</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastCategoryName__c</fullName>
        <externalDeveloperName>ForecastCategoryName</externalDeveloperName>
        <label>Forecast Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <externalDeveloperName>ForecastCategory</externalDeveloperName>
        <label>Forecast Category</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOpenActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOpenActivity</externalDeveloperName>
        <label>Has Open Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOpportunityLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOpportunityLineItem</externalDeveloperName>
        <label>Has Line Item</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOverdueTask__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOverdueTask</externalDeveloperName>
        <label>Has Overdue Task</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsClosed</externalDeveloperName>
        <label>Closed</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPrivate</externalDeveloperName>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWon__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsWon</externalDeveloperName>
        <label>Won</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <externalDeveloperName>NextStep</externalDeveloperName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook2Id__c</fullName>
        <externalDeveloperName>Pricebook2Id</externalDeveloperName>
        <label>Price Book ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <externalDeveloperName>Probability</externalDeveloperName>
        <label>Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <externalDeveloperName>StageName</externalDeveloperName>
        <label>Stage</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalOpportunityQuantity__c</fullName>
        <externalDeveloperName>TotalOpportunityQuantity</externalDeveloperName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Opportunity Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sriram68_CurrentGenerators_c__c</fullName>
        <externalDeveloperName>sriram68__CurrentGenerators__c</externalDeveloperName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sriram68_DeliveryInstallationStatus_c__c</fullName>
        <externalDeveloperName>sriram68__DeliveryInstallationStatus__c</externalDeveloperName>
        <label>Delivery/Installation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sriram68_MainCompetitors_c__c</fullName>
        <externalDeveloperName>sriram68__MainCompetitors__c</externalDeveloperName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sriram68_OrderNumber_c__c</fullName>
        <externalDeveloperName>sriram68__OrderNumber__c</externalDeveloperName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sriram68_TrackingNumber_c__c</fullName>
        <externalDeveloperName>sriram68__TrackingNumber__c</externalDeveloperName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>SriramCo Opportunity</label>
    <pluralLabel>SriramCo Opportunities</pluralLabel>
</CustomObject>